git-svn-id: http://ikube.googlecode.com/svn/trunk@256 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.xml
+++ b/build.xml
@@ -34,7 +34,7 @@
 		<delete dir="${tomcat.1.bin}/${indexes}" failonerror="true" />
 		<delete dir="${tomcat.2.bin}/${indexes}" failonerror="true" />
 		<delete dir="${tomcat.3.bin}/${indexes}" failonerror="true" />
-		<delete dir="${cluster.directory}/indexes" failonerror="true" />
+		<!-- delete dir="${cluster.directory}/indexes" failonerror="true" / -->
 		<!--delete file="${tomcat.vm.one.bin}/${indexes}" failonerror="false" / -->
 		<!-- delete file="${tomcat.ikube.bin}/${indexes}" failonerror="false" />
 		<delete file="${tomcat.ikube.cluster.one.bin}/${indexes}" failonerror="false" />
