--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -3,7 +3,7 @@ delay=10000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the indexes
-max.age=7200000
+max.age=10800000
 
 # Eventually we want to set this to about 10 milliseconds and
 # verify that the open close and index actions do not interrupt
@@ -64,7 +64,8 @@ max.field.length=100000
 max.read.length=1000000
 
 # The path for the index(s)
-index.directory.path=D:/Eclipse/workspace/ikube/indexes
+# D:/Eclipse/workspace/ikube/indexes
+index.directory.path=D:/cluster/indexes
 
 # General JDBC settings
 jdbc.minPoolSize=10
