git-svn-id: http://ikube.googlecode.com/svn/trunk@258 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -3,7 +3,7 @@ delay=10000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the indexes
-max.age=10800000
+max.age=7200000
 
 # Eventually we want to set this to about 10 milliseconds and
 # verify that the open close and index actions do not interrupt
@@ -14,10 +14,10 @@ web.service.period=10000
 searcher.index.name.one=indexOne
 searcher.index.name.two=indexTwo
 searcher.index.name.three=indexThree
-searcher.field.name=answer
+searcher.field.name=content
 searcher.fragment=true
 searcher.minimum.results.size=10
-searcher.search.string=answer clinch crackerjack books gall thorough going tall pissed committee greathearted cyborg devotional tremor tuba
+searcher.search.string=answer clinch crackerjack books gall thorough going tall pissed committee greathearted cyborg devotional tremor tuba ikokoon
 searcher.start.index=0
 searcher.end.index=101
 
@@ -64,8 +64,7 @@ max.field.length=100000
 max.read.length=1000000
 
 # The path for the index(s)
-# D:/Eclipse/workspace/ikube/indexes
-index.directory.path=D:/cluster/indexes
+index.directory.path=./indexes
 
 # General JDBC settings
 jdbc.minPoolSize=10
