--- a/build.xml
+++ b/build.xml
@@ -69,7 +69,9 @@
 
 	<target name="startCluster">
 		<antcall target="startOne" />
+		<sleep milliseconds="10000" />
 		<antcall target="startTwo" />
+		<sleep milliseconds="10000" />
 		<antcall target="startThree" />
 	</target>
 
