--- a/modules/core/src/test/resources/data/spring.properties
+++ b/modules/core/src/test/resources/data/spring.properties
@@ -25,17 +25,17 @@ jdbc.checkOutTimeout=10000
 jdbc.numHelperThreads=10
 
 #DB2 database
-jdbc.name=DB2
-jdbc.driver.type=4
-jdbc.user=db2admin
-jdbc.password=db2admin
-jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/ikube
-jdbc.database=ikube
-jdbc.port=50000
-jdbc.server=localhost
-jdbc.driver=com.ibm.db2.jcc.DB2Driver
-jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
+#jdbc.name=DB2
+#jdbc.driver.type=4
+#jdbc.user=db2admin
+#jdbc.password=db2admin
+#jdbc.schema=db2admin
+#jdbc.url=jdbc:db2://localhost:50000/ikube
+#jdbc.database=ikube
+#jdbc.port=50000
+#jdbc.server=localhost
+#jdbc.driver=com.ibm.db2.jcc.DB2Driver
+#jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
 
 #H2 database
 #jdbc.user=sa
@@ -48,6 +48,22 @@ jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
 #jdbc.database=test
 #jdbc.server=isearch
 #jdbc.port=9092
+#jdbc.schema=test
 #jdbc:h2:mem:search;DB_CLOSE_ON_EXIT=FALSE
 #jdbc:h2:tcp://localhost/~/test;DB_CLOSE_ON_EXIT=FALSE
 #jdbc:h2:tcp://falcon:9092/~/test;DB_CLOSE_ON_EXIT=FALSE
+
+#Oracle database
+jdbc.user=XE
+jdbc.password=oracle
+jdbc.driver=oracle.jdbc.driver.OracleDriver
+jdbc.dataSource=oracle.jdbc.pool.OracleDataSource
+jdbc.url=jdbc:oracle:thin:@//falcon:1521/XE
+jdbc.database=XE
+jdbc.server=falcon
+jdbc.port=1521
+jdbc.schema=XE
+#jdbc:oracle:thin:@//localhost:1521/xe,
+#oracle.jdbc.xa.client.OracleXADataSource
+#org.enhydra.jdbc.standard.StandardXADataSource
+#org.enhydra.jdbc.oracle.OracleXADataSource
