git-svn-id: http://ikube.googlecode.com/svn/trunk@264 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -59,6 +59,7 @@ jdbc.url=jdbc:h2:mem:database;DB_CLOSE_ON_EXIT=FALSE
 jdbc.database=database
 jdbc.server=localhost
 jdbc.port=9092
+jdbc.schema=db2admin
 #jdbc:h2:mem:search;DB_CLOSE_ON_EXIT=FALSE
 #jdbc:h2:tcp://localhost/~/test;DB_CLOSE_ON_EXIT=FALSE
 #jdbc:h2:tcp://falcon:9092/~/test;DB_CLOSE_ON_EXIT=FALSE
