git-svn-id: http://ikube.googlecode.com/svn/trunk@265 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -9,6 +9,9 @@ max.age=36000000
 web.service.delay=3600000
 web.service.period=3600000
 
+validation.delay=600000
+validation.period=600000
+
 synchronisation.delay=10000
 synchronisation.period=10000
 
