--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -19,10 +19,10 @@
 
 	<properties>
 		<main.class>write.a.main.Class.For.stand.Alone</main.class>
-		<write.classes>-Dwrite.classes=false</write.classes>
-		<clean.classes>-Dclean.classes=false</clean.classes>
+		<write.classes>-Dwrite.classes=true</write.classes>
+		<clean.classes>-Dclean.classes=true</clean.classes>
 		<included.packages>-Dincluded.packages=ikube</included.packages>
-		<excluded.packages>-Dexcluded.packages=model:database:service</excluded.packages>
+		<excluded.packages>-Dexcluded.packages=model</excluded.packages>
 		<included.adapters>-Dincluded.adapters=coverage:complexity:dependency</included.adapters>
 	</properties>
 
