git-svn-id: http://ikube.googlecode.com/svn/trunk@269 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -64,7 +64,7 @@ max.field.length=100000
 max.read.length=1000000
 
 # The path for the index(s)
-index.directory.path=./indexes
+index.directory.path=D:/cluster/indexes
 
 # General JDBC settings
 jdbc.minPoolSize=10
