--- a/modules/war/pom.xml
+++ b/modules/war/pom.xml
@@ -32,6 +32,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
+				<version>1.1</version>
 				<configuration>
 					<port>80</port>
 					<path>/ikube-war-1.0</path>
