--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -53,22 +53,9 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<forkMode>once</forkMode>
-					<additionalClasspathElements>
-						<!--<additionalClasspathElement>D:/Eclipse_64/workspace/ikube/modules/core/target/ikube-core-1.0.jar</additionalClasspathElement>-->
-						<!--<additionalClasspathElement>../../target/dependency/ikube-core-1.0.jar</additionalClasspathElement>-->
-					</additionalClasspathElements>
-					<!--<useSystemClassLoader>true</useSystemClassLoader>-->
-					<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
-					<excludes>
-						<exclude>**/TextParserTest.java</exclude>
-						<exclude>**/DataBaseOdbTest.java</exclude>
-						<exclude>**/DataBaseOdbMapStoreTest.java</exclude>
-					</excludes>
-				</configuration>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>surefire-report-maven-plugin</artifactId>
+				<version>2.0-beta-1</version>
 			</plugin>
 		</plugins>
 	</build>
