--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -18,7 +18,7 @@
 	</parent>
 
 	<properties>
-		<main.class>write.a.main.Class.For.stand.Alone</main.class>
+		<main.class>ikube.Ikube</main.class>
 		<write.classes>-Dwrite.classes=true</write.classes>
 		<clean.classes>-Dclean.classes=true</clean.classes>
 		<included.packages>-Dincluded.packages=ikube</included.packages>
@@ -46,16 +46,62 @@
 						<index>true</index>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<classpathPrefix>lib/</classpathPrefix>
+							<!--<classpathPrefix>dependency/</classpathPrefix>-->
 							<mainClass>${main.class}</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>surefire-report-maven-plugin</artifactId>
-				<version>2.0-beta-1</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.7.1</version>
+				<configuration>
+					<forkMode>once</forkMode>
+					<additionalClasspathElements>
+						<!--<additionalClasspathElement>D:/Eclipse_64/workspace/ikube/modules/core/target/ikube-core-1.0.jar</additionalClasspathElement> -->
+						<!--<additionalClasspathElement>../../target/dependency/ikube-core-1.0.jar</additionalClasspathElement> -->
+					</additionalClasspathElements>
+					<!--<useSystemClassLoader>true</useSystemClassLoader> -->
+					<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
+					<excludes>
+						<exclude>**/TextParserTest.java</exclude>
+						<exclude>**/DataBaseOdbTest.java</exclude>
+						<exclude>**/DataBaseOdbMapStoreTest.java</exclude>
+						<exclude>**/SynchronizeTest.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2-beta-5</version>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<manifest>
+						<addClasspath>true</addClasspath>
+						<mainClass>ikube.Ikube</mainClass>
+					</manifest>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
