--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -19,8 +19,8 @@
 
 	<properties>
 		<main.class>ikube.Ikube</main.class>
-		<write.classes>-Dwrite.classes=true</write.classes>
-		<clean.classes>-Dclean.classes=true</clean.classes>
+		<write.classes>-Dwrite.classes=false</write.classes>
+		<clean.classes>-Dclean.classes=false</clean.classes>
 		<included.packages>-Dincluded.packages=ikube</included.packages>
 		<excluded.packages>-Dexcluded.packages=model</excluded.packages>
 		<included.adapters>-Dincluded.adapters=coverage:complexity:dependency</included.adapters>
@@ -46,23 +46,36 @@
 						<index>true</index>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<!--<classpathPrefix>dependency/</classpathPrefix>-->
+							<classpathPrefix>lib/</classpathPrefix>
 							<mainClass>${main.class}</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
 			</plugin>
+			<!--<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+							<overWriteReleases>true</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.7.1</version>
 				<configuration>
 					<forkMode>once</forkMode>
-					<additionalClasspathElements>
-						<!--<additionalClasspathElement>D:/Eclipse_64/workspace/ikube/modules/core/target/ikube-core-1.0.jar</additionalClasspathElement> -->
-						<!--<additionalClasspathElement>../../target/dependency/ikube-core-1.0.jar</additionalClasspathElement> -->
-					</additionalClasspathElements>
-					<!--<useSystemClassLoader>true</useSystemClassLoader> -->
 					<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
 					<excludes>
 						<exclude>**/TextParserTest.java</exclude>
@@ -72,7 +85,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.2-beta-5</version>
 				<configuration>
@@ -84,25 +97,7 @@
 						<mainClass>ikube.Ikube</mainClass>
 					</manifest>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}</outputDirectory>
-							<overWriteReleases>false</overWriteReleases>
-							<overWriteSnapshots>true</overWriteSnapshots>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+			</plugin>-->
 		</plugins>
 	</build>
 
