--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -64,7 +64,7 @@ max.field.length=100000
 max.read.length=1000000
 
 # The path for the index(s)
-index.directory.path=D:/cluster/indexes
+index.directory.path=./indexes
 
 # General JDBC settings
 jdbc.minPoolSize=10
