--- a/code/pom.xml
+++ b/code/pom.xml
@@ -56,7 +56,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
@@ -258,21 +257,21 @@
 			<artifactId>h2</artifactId>
 			<version>1.2.134</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.ibm.db2.jcc</groupId>
 			<artifactId>db2jcc</artifactId>
 			<version>9.5</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.ibm.db2.jcc_license_cu</groupId>
 			<artifactId>db2jcc_license_cu</artifactId>
 			<version>9.5</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -430,7 +429,7 @@
 			<artifactId>ojdbc6</artifactId>
 			<version>11</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.jcs</groupId>
