Moved the primary pom to the base of the project structure so Eclipse Maven plugin can find it easily. Added some missing stand alone code back, and the spring.handlers, spring.schemas and spring.tooling as well, which is a hack until a solution can be found.
git-svn-id: http://ikube.googlecode.com/svn/trunk@279 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,12 @@
 		<slf4j.version>1.5.10</slf4j.version>
 		<logback.version>0.9.15</logback.version>
 		<junit.version>4.8.2</junit.version>
-		<project.build.outputDirectory>modules/core/target/classes</project.build.outputDirectory>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<modules>
-		<module>core</module>
-		<module>war</module>
+		<module>code/core</module>
+		<module>code/war</module>
 	</modules>
 
 	<build>
