--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -17,11 +17,11 @@
 	</parent>
 
 	<properties>
-		<main.class>write.a.main.Class.For.stand.Alone</main.class>
+		<main.class>ikube.Ikube</main.class>
 		<write.classes>-Dwrite.classes=false</write.classes>
 		<clean.classes>-Dclean.classes=false</clean.classes>
 		<included.packages>-Dincluded.packages=ikube</included.packages>
-		<excluded.packages>-Dexcluded.packages=model:database:service</excluded.packages>
+		<excluded.packages>-Dexcluded.packages=model</excluded.packages>
 		<included.adapters>-Dincluded.adapters=coverage:complexity:dependency</included.adapters>
 	</properties>
 
@@ -45,6 +45,7 @@
 						<index>true</index>
 						<manifest>
 							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
 							<mainClass>${main.class}</mainClass>
 						</manifest>
 					</archive>
@@ -52,15 +53,50 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/lib</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.7.1</version>
 				<configuration>
 					<forkMode>once</forkMode>
-					<!--<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>-->
+					<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
 					<excludes>
 						<exclude>**/TextParserTest.java</exclude>
+						<exclude>**/DataBaseOdbTest.java</exclude>
+						<exclude>**/DataBaseOdbMapStoreTest.java</exclude>
+						<exclude>**/SynchronizeTest.java</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
+			<!--<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2-beta-5</version>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<manifest>
+						<addClasspath>true</addClasspath>
+						<mainClass>ikube.Ikube</mainClass>
+					</manifest>
+				</configuration>
+			</plugin>-->
 		</plugins>
 	</build>
 
