git-svn-id: http://ikube.googlecode.com/svn/trunk@288 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/test/resources/data/spring.properties
+++ b/code/core/src/test/resources/data/spring.properties
@@ -55,12 +55,12 @@ jdbc.numHelperThreads=10
 
 #Oracle database
 jdbc.user=XE
-jdbc.password=oracle
+jdbc.password=admin
 jdbc.driver=oracle.jdbc.driver.OracleDriver
 jdbc.dataSource=oracle.jdbc.pool.OracleDataSource
-jdbc.url=jdbc:oracle:thin:@//falcon:1521/XE
+jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
 jdbc.database=XE
-jdbc.server=falcon
+jdbc.server=ikube
 jdbc.port=1521
 jdbc.schema=XE
 #jdbc:oracle:thin:@//localhost:1521/xe,
