--- a/code/core/src/main/resources/META-INF/spring.properties
+++ b/code/core/src/main/resources/META-INF/spring.properties
@@ -74,14 +74,26 @@ jdbc.checkOutTimeout=${max.age}
 jdbc.numHelperThreads=1
 
 # DB2 database
-jdbc.name=DB2
+#jdbc.name=DB2
+#jdbc.driver.type=4
+#jdbc.user=db2admin
+#jdbc.password=db2admin
+#jdbc.schema=db2admin
+#jdbc.url=jdbc:db2://localhost:50000/ikube
+#jdbc.database=ikube
+#jdbc.port=50000
+#jdbc.server=localhost
+#jdbc.driver=com.ibm.db2.jcc.DB2Driver
+#jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
+
+#Oracle database
+jdbc.user=XE
+jdbc.password=admin
 jdbc.driver.type=4
-jdbc.user=db2admin
-jdbc.password=db2admin
-jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/ikube
-jdbc.database=ikube
-jdbc.port=50000
-jdbc.server=localhost
-jdbc.driver=com.ibm.db2.jcc.DB2Driver
-jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
+jdbc.driver=oracle.jdbc.driver.OracleDriver
+jdbc.dataSource=oracle.jdbc.pool.OracleDataSource
+jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
+jdbc.database=XE
+jdbc.server=ikube
+jdbc.port=1521
+jdbc.schema=XE
