Fixed a bug relating to the next id in the table handler. Updated the configuration to do the attachments as well. Fixed the base test class to call the before and after methods in the data generators before running.
git-svn-id: http://ikube.googlecode.com/svn/trunk@289 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/spring.properties
+++ b/code/core/src/main/resources/META-INF/spring.properties
@@ -8,13 +8,13 @@ max.age=7200000
 # Eventually we want to set this to about 10 milliseconds and
 # verify that the open close and index actions do not interrupt
 # the search operations and clients
-web.service.delay=10000
-web.service.period=10000
+web.service.delay=1000000
+web.service.period=1000000
 
 searcher.index.name.one=indexOne
 searcher.index.name.two=indexTwo
 searcher.index.name.three=indexThree
-searcher.field.name=content
+searcher.field.name=answer
 searcher.fragment=true
 searcher.minimum.results.size=10
 searcher.search.string=answer clinch crackerjack books gall thorough going tall pissed committee greathearted cyborg devotional tremor tuba ikokoon
@@ -32,11 +32,11 @@ web.service.path=/ikube/service/ISearcherWebService?wsdl
 monitoring.service.path=/ikube/service/IMonitoringService?wsdl
 
 # The batch size for fetching records from the database
-jdbc.batch.size=10000
-internet.batch.size=10000
+jdbc.batch.size=100
+internet.batch.size=100
 
 # The number of threads for each indexing component
-table.handler.threads=3
+table.handler.threads=1
 internet.handler.threads=10
 filesystem.handler.threads=1
 email.handler.threads=1
@@ -58,8 +58,8 @@ url=http://www.ikokoon.eu/ikokoon/index.html
 # Lucene properties:
 buffer.size=256
 compound.file=true
-merge.factor=10000
-buffered.docs=10000
+merge.factor=100
+buffered.docs=100
 max.field.length=100000
 max.read.length=1000000
 
@@ -74,19 +74,19 @@ jdbc.checkOutTimeout=${max.age}
 jdbc.numHelperThreads=1
 
 # DB2 database
-#jdbc.name=DB2
-#jdbc.driver.type=4
-#jdbc.user=db2admin
-#jdbc.password=db2admin
-#jdbc.schema=db2admin
-#jdbc.url=jdbc:db2://localhost:50000/ikube
-#jdbc.database=ikube
-#jdbc.port=50000
-#jdbc.server=localhost
-#jdbc.driver=com.ibm.db2.jcc.DB2Driver
-#jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
+# jdbc.name=DB2
+# jdbc.driver.type=4
+# jdbc.user=db2admin
+# jdbc.password=db2admin
+# jdbc.schema=db2admin
+# jdbc.url=jdbc:db2://localhost:50000/ikube
+# jdbc.database=ikube
+# jdbc.port=50000
+# jdbc.server=localhost
+# jdbc.driver=com.ibm.db2.jcc.DB2Driver
+# jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
 
-#Oracle database
+# Oracle database
 jdbc.user=XE
 jdbc.password=admin
 jdbc.driver.type=4
