--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -75,7 +75,7 @@
 				<version>2.7.1</version>
 				<configuration>
 					<forkMode>once</forkMode>
-					<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
+					<!--<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>-->
 					<excludes>
 						<exclude>**/TextParserTest.java</exclude>
 						<exclude>**/DataBaseOdbTest.java</exclude>
