--- a/pom.xml
+++ b/pom.xml
@@ -279,13 +279,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.neodatis.odb</groupId>
 			<artifactId>neodatis-odb</artifactId>
 			<version>1.9.21.679</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -474,6 +474,13 @@
 			<version>0.2.0</version>
 			<type>jar</type>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.neodatis</groupId>
+			<artifactId>neodatis-odb</artifactId>
+			<version>1.9-beta-1</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
