git-svn-id: http://ikube.googlecode.com/svn/trunk@294 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -279,13 +279,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<!--<dependency>
+		<dependency>
 			<groupId>org.neodatis.odb</groupId>
 			<artifactId>neodatis-odb</artifactId>
 			<version>1.9.21.679</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency>-->
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
