--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -8,12 +8,13 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-core</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
 		<version>1.0</version>
+		<!--<relativePath>../../../ikube</relativePath>-->
 	</parent>
 
 	<properties>
