--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -10,12 +10,13 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-war</artifactId>
 	<packaging>war</packaging>
-	<version>1.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
 		<version>1.0</version>
+		<!--<relativePath>../../../ikube</relativePath>-->
 	</parent>
 
 	<build>
