--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<properties>
 		<spring.version>3.0.3.RELEASE</spring.version>
@@ -522,6 +522,12 @@
 			</snapshots>
 		</repository>
 	</repositories>
+	
+	<scm>
+		<url>https://ikube.googlecode.com/svn</url>
+		<connection>scm:svn:https://ikube.googlecode.com/svn/trunk</connection>
+		<developerConnection>scm:svn:https://ikube.googlecode.com/svn/trunk</developerConnection>
+	</scm>
 
 	<pluginRepositories>
 		<pluginRepository>
@@ -530,5 +536,20 @@
 			<url>http://download.java.net/maven/2</url>
 		</pluginRepository>
 	</pluginRepositories>
+
+	<distributionManagement>
+		<!-- use the following if you're not using a snapshot version. -->
+		<repository>
+			<id>ikube.googlecode.releases</id>
+			<name>ikube.googlecode.releases</name>
+			<url>dav:https://ikube.googlecode.com/svn/maven2/</url>
+		</repository>
+		<!-- use the following if you ARE using a snapshot version. -->
+		<snapshotRepository>
+			<id>ikube.googlecode.snapshots</id>
+			<name>ikube.googlecode.snapshots</name>
+			<url>dav:https://ikube.googlecode.com/svn/maven2-snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 </project>
