--- a/scripts/build.properties
+++ b/scripts/build.properties
@@ -1,67 +1,50 @@
-# For the deploy.xml
 project.directory=.
-project.name=Search
+project.name=ikube
 project.version=1.0
 
-ear.dir=${project.directory}/modules/Ear
-ejb.dir=${project.directory}/modules/Ejb
-war.dir=${project.directory}/modules/War
+target.directory=modules/war/target
+core.target.directory=modules/core/target
 
-ear.build.dir=${ear.dir}/target
-ejb.build.dir=${ejb.dir}/target
-war.build.dir=${war.dir}/target
+cluster.directory=D:/cluster
 
-jboss6.0.home=D:/Servers/JBoss/6.0/jboss-6.0.0.20100429-M3/server
-jboss6.0.deploy.directory=${jboss6.0.home}/default/deploy
+tomcat=D:/apache-tomcat-6.0.26
+tomcat.1=${cluster.directory}/apache-tomcat-6.0.29-1
+tomcat.2=${cluster.directory}/apache-tomcat-6.0.29-2
+tomcat.3=${cluster.directory}/apache-tomcat-6.0.29-3
 
-resin3.1.9.webapps=D:/Servers/Resin/resin-3.1.10/webapps
+tomcat.webapps=${tomcat}/webapps
+tomcat.1.webapps=${tomcat.1}/webapps
+tomcat.2.webapps=${tomcat.2}/webapps
+tomcat.3.webapps=${tomcat.3}/webapps
+tomcat.ikube.webapps=${tomcat.ikube}/webapps
 
-# tomcat6.0.webapps=D:/Servers/Tomcat/apache-tomcat-6.0.26/webapps
-tomcat6.0.webapps=G:/servers/apache-tomcat-6.0.26/webapps
+tomcat.bin=${tomcat}/bin
+tomcat.1.bin=${tomcat.1}/bin
+tomcat.2.bin=${tomcat.2}/bin
+tomcat.3.bin=${tomcat.3}/bin
+tomcat.ikube.bin=${tomcat.ikube}/bin
 
-weblogic.home=C:/Oracle/Middleware/user_projects/domains/cluster.1
-weblogic.deploy.directory.1=${weblogic.home}/autodeploy
-weblogic.deploy.directory.2=${weblogic.home}/autodeploy
-weblogic.deploy.directory.3=${weblogic.home}/autodeploy
+tomcat.vm.one=//One/c/apache-tomcat-6.0.29
+tomcat.vm.one.webapps=${tomcat.vm.one}/webapps
+tomcat.vm.one.bin=${tomcat.vm.one}/bin
 
-#General JDBC settings
-jdbc.minPoolSize=10
-jdbc.maxPoolSize=100
+tomcat.ikube=//Ikube/d/apache-tomcat-6.0.26
+tomcat.ikube.webapps=${tomcat.ikube}/webapps
+tomcat.ikube.bin=${tomcat.ikube}/bin
 
-#H2 database
-#jdbc.user=sa
-#jdbc.password=
-#jdbc.driver=org.h2.Driver
-#jdbc.dataSource=org.h2.jdbcx.JdbcDataSource
-#jdbc.url=jdbc:h2:tcp://falcon:9092/~/test
-#jdbc:h2:mem:search
-#jdbc:h2:tcp://localhost/~/test
-#jdbc:h2:tcp://falcon:9092/~/test
-#org.h2.jdbcx.JdbcDataSource
-#org.enhydra.jdbc.standard.StandardXADataSource
+tomcat.ikube.cluster=//Ikube/d/cluster
 
-#DB2 database
-jdbc.user=db2admin
-jdbc.password=db2admin
-jdbc.driver=com.ibm.db2.jcc.DB2Driver
-jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
-jdbc.schema=db2admin
-jdbc.url=jdbc:db2://falcon:50000/isearch
-jdbc.server=falcon
-jdbc.port=50000
-jdbc.database=isearch
-jdbc.driver.type=4
-#hit.db2.Db2XADataSource
-#com.ibm.db2.jcc.DB2XADataSource
-#org.enhydra.jdbc.standard.StandardXADataSource
+tomcat.ikube.cluster.one=${tomcat.ikube.cluster}/apache-tomcat-6.0.29-1
+tomcat.ikube.cluster.two=${tomcat.ikube.cluster}/apache-tomcat-6.0.29-2
+tomcat.ikube.cluster.three=${tomcat.ikube.cluster}/apache-tomcat-6.0.29-3
 
-#Oracle database
-#jdbc.user=isearch
-#jdbc.password=isearch
-#jdbc.driver=oracle.jdbc.driver.OracleDriver
-#jdbc.dataSource=oracle.jdbc.xa.client.OracleXADataSource
-#jdbc.url=jdbc:oracle:thin:@//falcon:1521/oracle
-#jdbc:oracle:thin:@//localhost:1521/xe,
-#oracle.jdbc.xa.client.OracleXADataSource
-#org.enhydra.jdbc.standard.StandardXADataSource
-#org.enhydra.jdbc.oracle.OracleXADataSource
+tomcat.ikube.cluster.one.bin=${tomcat.ikube.cluster.one}/bin
+tomcat.ikube.cluster.two.bin={tomcat.ikube.cluster.two}/bin
+tomcat.ikube.cluster.three.bin={tomcat.ikube.cluster.three}/bin
+
+tomcat.ikube.cluster.one.webapps=${tomcat.ikube.cluster.one}/webapps
+tomcat.ikube.cluster.two.webapps=${tomcat.ikube.cluster.two}/webapps
+tomcat.ikube.cluster.three.webapps=${tomcat.ikube.cluster.three}/webapps
+
+ikube.client.libs=../ikube-client/libs
+
