--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0   http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ikube</groupId>
 	<artifactId>ikube</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<properties>
 		<spring.version>3.0.3.RELEASE</spring.version>
@@ -521,9 +521,9 @@
 	</repositories>
 	
 	<scm>
-		<url>https://ikube.googlecode.com/svn/tags/ikube-1.0.0</url>
-		<connection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-1.0.0</connection>
-		<developerConnection>scm:svn:https://ikube.googlecode.com/svn/tags/ikube-1.0.0</developerConnection>
+		<url>https://ikube.googlecode.com/svn</url>
+		<connection>scm:svn:https://ikube.googlecode.com/svn/trunk</connection>
+		<developerConnection>scm:svn:https://ikube.googlecode.com/svn/trunk</developerConnection>
 	</scm>
 
 	<pluginRepositories>
