Updated the poms after the tagging.
git-svn-id: http://ikube.googlecode.com/svn/trunk@312 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -11,7 +11,7 @@
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
 		<version>1.0.1-SNAPSHOT</version>
-		<relativePath>../../../ikube</relativePath>
+		<!--<relativePath>../../../ikube</relativePath>-->
 	</parent>
 
 	<properties>
