git-svn-id: http://ikube.googlecode.com/svn/trunk@314 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/minimal/spring.properties
+++ b/code/core/src/main/resources/META-INF/minimal/spring.properties
@@ -2,8 +2,8 @@
 delay=10000
 # The period between notifications for timed tasks
 period=60000
-# The maximum age of the indexes
-max.age=3600000
+# The maximum age of the indexes in minutes
+max.age=60
 
 service.protocol=http
 service.port=8081
