--- a/code/core/src/main/resources/META-INF/spring.properties
+++ b/code/core/src/main/resources/META-INF/spring.properties
@@ -2,8 +2,8 @@
 delay=10000
 # The period between notifications for timed tasks
 period=60000
-# The maximum age of the indexes
-max.age=72000000
+# The maximum age of the indexes in minutes
+max.age=180
 
 # Eventually we want to set this to about 10 milliseconds and
 # verify that the open close and index actions do not interrupt
@@ -32,7 +32,7 @@ web.service.path=/ikube/service/ISearcherWebService?wsdl
 monitoring.service.path=/ikube/service/IMonitoringService?wsdl
 
 # The batch size for fetching records from the database
-jdbc.batch.size=100
+jdbc.batch.size=10000
 internet.batch.size=100
 
 # The number of threads for each indexing component
@@ -45,15 +45,15 @@ email.handler.threads=1
 files.path=D:/apache-tomcat-6.0.26
 
 # To limit the results
-faq.predicate=where faq.faqid < 1000000
+faq.predicate=where faq.faqid < 100000000
 
 # The time delay between reads in the crawler
 throttle=0
 # The first seed url for internet crawling
 # http://www.ikokoon.eu/ikokoon/index.html
 # http://www.oki.com/
-# http://localhost/million/adapt.html
-url=http://www.ikokoon.eu/ikokoon/index.html
+url=http://localhost/million/adapt.html
+# url=http://www.ikokoon.eu/ikokoon/index.html
 
 # Lucene properties:
 buffer.size=256
@@ -74,26 +74,26 @@ jdbc.checkOutTimeout=${max.age}
 jdbc.numHelperThreads=1
 
 # DB2 database
-# jdbc.name=DB2
-# jdbc.driver.type=4
-# jdbc.user=db2admin
-# jdbc.password=db2admin
-# jdbc.schema=db2admin
-# jdbc.url=jdbc:db2://localhost:50000/ikube
-# jdbc.database=ikube
-# jdbc.port=50000
-# jdbc.server=localhost
-# jdbc.driver=com.ibm.db2.jcc.DB2Driver
-# jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
+jdbc.name=DB2
+jdbc.driver.type=4
+jdbc.user=db2admin
+jdbc.password=db2admin
+jdbc.schema=db2admin
+jdbc.url=jdbc:db2://localhost:50000/ikube
+jdbc.database=ikube
+jdbc.port=50000
+jdbc.server=localhost
+jdbc.driver=com.ibm.db2.jcc.DB2Driver
+jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
 
 # Oracle database
-jdbc.user=XE
-jdbc.password=admin
-jdbc.driver.type=4
-jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.dataSource=oracle.jdbc.pool.OracleDataSource
-jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
-jdbc.database=XE
-jdbc.server=ikube
-jdbc.port=1521
-jdbc.schema=XE
+# jdbc.user=XE
+# jdbc.password=admin
+# jdbc.driver.type=4
+# jdbc.driver=oracle.jdbc.driver.OracleDriver
+# jdbc.dataSource=oracle.jdbc.pool.OracleDataSource
+# jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
+# jdbc.database=XE
+# jdbc.server=ikube
+# jdbc.port=1521
+# jdbc.schema=XE
