--- a/code/core/src/main/resources/META-INF/cluster/spring.properties
+++ b/code/core/src/main/resources/META-INF/cluster/spring.properties
@@ -3,7 +3,7 @@ delay=10000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the indexes
-max.age=36000000
+max.age=72000000
 
 # Eventually we want to set this to about 10 milliseconds and
 # verify that the open close and index actions do not interrupt
@@ -11,7 +11,9 @@ max.age=36000000
 web.service.delay=1000000
 web.service.period=1000000
 
-searcher.index.name=index
+searcher.index.name.one=indexOne
+searcher.index.name.two=indexTwo
+searcher.index.name.three=indexThree
 searcher.field.name=answer
 searcher.fragment=true
 searcher.minimum.results.size=10
@@ -30,12 +32,12 @@ web.service.path=/ikube/service/ISearcherWebService?wsdl
 monitoring.service.path=/ikube/service/IMonitoringService?wsdl
 
 # The batch size for fetching records from the database
-jdbc.batch.size=1000
-internet.batch.size=100
+jdbc.batch.size=10000
+internet.batch.size=1000
 
 # The number of threads for each indexing component
-table.handler.threads=3
-internet.handler.threads=3
+table.handler.threads=1
+internet.handler.threads=10
 filesystem.handler.threads=1
 email.handler.threads=1
 
@@ -62,36 +64,36 @@ max.field.length=100000
 max.read.length=1000000
 
 # The path for the index(s)
-index.directory.path=.
+index.directory.path=D:/Eclipse/workspace/ikube/cluster
 
 # General JDBC settings
 jdbc.minPoolSize=10
 jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
-jdbc.checkOutTimeout=60000
+jdbc.checkOutTimeout=${max.age}
 jdbc.numHelperThreads=1
 
 # DB2 database
-jdbc.name=DB2
-jdbc.driver.type=4
-jdbc.user=db2admin
-jdbc.password=db2admin
-jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/ikube
-jdbc.database=ikube
-jdbc.port=50000
-jdbc.server=localhost
-jdbc.driver=com.ibm.db2.jcc.DB2Driver
-jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
+# jdbc.name=DB2
+# jdbc.driver.type=4
+# jdbc.user=db2admin
+# jdbc.password=db2admin
+# jdbc.schema=db2admin
+# jdbc.url=jdbc:db2://localhost:50000/ikube
+# jdbc.database=ikube
+# jdbc.port=50000
+# jdbc.server=localhost
+# jdbc.driver=com.ibm.db2.jcc.DB2Driver
+# jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
 
 # Oracle database
-# jdbc.user=XE
-# jdbc.password=admin
-# jdbc.driver.type=4
-# jdbc.driver=oracle.jdbc.driver.OracleDriver
-# jdbc.dataSource=oracle.jdbc.pool.OracleDataSource
-# jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
-# jdbc.database=XE
-# jdbc.server=ikube
-# jdbc.port=1521
-# jdbc.schema=XE
+jdbc.user=XE
+jdbc.password=admin
+jdbc.driver.type=4
+jdbc.driver=oracle.jdbc.driver.OracleDriver
+jdbc.dataSource=oracle.jdbc.pool.OracleDataSource
+jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
+jdbc.database=XE
+jdbc.server=ikube
+jdbc.port=1521
+jdbc.schema=XE
