Fixed some warnings from CodePro.
git-svn-id: http://ikube.googlecode.com/svn/trunk@319 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/spring.properties
+++ b/code/core/src/main/resources/META-INF/spring.properties
@@ -43,7 +43,7 @@ email.handler.threads=1
 files.path=D:/apache-tomcat-6.0.26
 
 # To limit the results
-faq.predicate=where faq.faqid < 1000000
+faq.predicate=where faq.faqid < 1000000 and published = true
 
 # The time delay between reads in the crawler
 throttle=0
@@ -62,7 +62,7 @@ max.field.length=100000
 max.read.length=1000000
 
 # The path for the index(s)
-index.directory.path=.
+index.directory.path=\\network\drive\index
 
 # General JDBC settings
 jdbc.minPoolSize=10
