Changed the annotation for handlers to a Spring configuration. Removed all the configuration files to use a common file to simplify configuration files.
git-svn-id: http://ikube.googlecode.com/svn/trunk@320 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/configuration/spring-test.properties
+++ b/code/core/src/main/resources/META-INF/configuration/spring-test.properties
@@ -18,6 +18,8 @@ synchronisation.period=10000
 service.protocol=http
 service.port=8081
 web.service.path=/ikube/service/ISearcherWebService?wsdl
+
+monitoring.service.port=8090
 monitoring.service.path=/ikube/service/IMonitoringService?wsdl
 
 throttle=0
@@ -50,6 +52,14 @@ jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
 jdbc.checkOutTimeout=360000000
 jdbc.numHelperThreads=5
+
+searcher.index.name=index
+searcher.field.name=answer
+searcher.fragment=true
+searcher.minimum.results.size=10
+searcher.search.string=answer clinch crackerjack books gall thorough going tall pissed committee greathearted cyborg devotional tremor tuba ikokoon
+searcher.start.index=0
+searcher.end.index=101
 
 #H2 database
 jdbc.user=sa
