--- a/code/core/src/main/resources/META-INF/configuration/spring-integration.properties
+++ b/code/core/src/main/resources/META-INF/configuration/spring-integration.properties
@@ -2,8 +2,8 @@
 delay=10000
 # The period between notifications for timed tasks
 period=60000
-# The maximum age of the indexes
-max.age=36000000
+# The maximum age of the indexes in minutes
+max.age=180
 
 # Eventually we want to set this to about 10 milliseconds and
 # verify that the open close and index actions do not interrupt
@@ -11,7 +11,6 @@ max.age=36000000
 web.service.delay=1000000
 web.service.period=1000000
 
-searcher.index.name=index
 searcher.field.name=answer
 searcher.fragment=true
 searcher.minimum.results.size=10
@@ -30,12 +29,12 @@ web.service.path=/ikube/service/ISearcherWebService?wsdl
 monitoring.service.path=/ikube/service/IMonitoringService?wsdl
 
 # The batch size for fetching records from the database
-jdbc.batch.size=1000
-internet.batch.size=100
+jdbc.batch.size=10000
+internet.batch.size=1000
 
 # The number of threads for each indexing component
 table.handler.threads=3
-internet.handler.threads=3
+internet.handler.threads=10
 filesystem.handler.threads=1
 email.handler.threads=1
 
@@ -43,31 +42,31 @@ email.handler.threads=1
 files.path=D:/apache-tomcat-6.0.26
 
 # To limit the results
-faq.predicate=where faq.faqid < 1000000 and published = true
+faq.predicate=where faq.faqid < 100000
 
 # The time delay between reads in the crawler
 throttle=0
 # The first seed url for internet crawling
 # http://www.ikokoon.eu/ikokoon/index.html
 # http://www.oki.com/
-# http://localhost/million/adapt.html
-url=http://www.ikokoon.eu/ikokoon/index.html
+url=http://localhost/million/adapt.html
+# url=http://www.ikokoon.eu/ikokoon/index.html
 
 # Lucene properties:
 buffer.size=256
 compound.file=true
-merge.factor=100
-buffered.docs=100
+merge.factor=10000
+buffered.docs=10000
 max.field.length=100000
 max.read.length=1000000
 
 # The path for the index(s)
-index.directory.path=\\network\drive\index
+index.directory.path=./indexes
 
 # General JDBC settings
-jdbc.minPoolSize=10
+jdbc.minPoolSize=3
 jdbc.maxPoolSize=100
-jdbc.maxStatements=1000
+jdbc.maxStatements=100
 jdbc.checkOutTimeout=60000
 jdbc.numHelperThreads=1
 
@@ -77,7 +76,7 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/ikube
+jdbc.url=jdbc:db2://ikube:50000/ikube
 jdbc.database=ikube
 jdbc.port=50000
 jdbc.server=localhost
