initial commit of the AOP rules intercepter for actions.
git-svn-id: http://ikube.googlecode.com/svn/trunk@331 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/configuration/spring-integration.properties
+++ b/code/core/src/main/resources/META-INF/configuration/spring-integration.properties
@@ -3,7 +3,7 @@ delay=10000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the indexes in minutes
-max.age=180
+max.age=10
 
 # Eventually we want to set this to about 10 milliseconds and
 # verify that the open close and index actions do not interrupt
@@ -11,6 +11,7 @@ max.age=180
 web.service.delay=1000000
 web.service.period=1000000
 
+searcher.index.name=index
 searcher.field.name=answer
 searcher.fragment=true
 searcher.minimum.results.size=10
@@ -49,8 +50,8 @@ throttle=0
 # The first seed url for internet crawling
 # http://www.ikokoon.eu/ikokoon/index.html
 # http://www.oki.com/
-url=http://localhost/million/adapt.html
-# url=http://www.ikokoon.eu/ikokoon/index.html
+# url=http://localhost/million/adapt.html
+url=http://www.ikokoon.eu/ikokoon/index.html
 
 # Lucene properties:
 buffer.size=256
@@ -76,7 +77,7 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://ikube:50000/ikube
+jdbc.url=jdbc:db2://localhost:50000/ikube
 jdbc.database=ikube
 jdbc.port=50000
 jdbc.server=localhost
