Changed the Jep from 2.4.1 to 2.24 so we can use Ibiblio and run Jenkins at Cloudbees.
git-svn-id: http://ikube.googlecode.com/svn/trunk@337 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -483,10 +483,17 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.nfunk</groupId>
 			<artifactId>jep</artifactId>
 			<version>2.4.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>-->
+		<dependency>
+			<groupId>jep</groupId>
+			<artifactId>jep</artifactId>
+			<version>2.24</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
