--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -31,6 +31,7 @@
 					<port>80</port>
 					<path>/ikube-war-1.0</path>
 				</configuration>
+				<version>1.1</version>
 				<dependencies>
 					<!--<dependency>
 						<groupId>oracle.ojdbc6</groupId>
